add embedding & llm layer

--- a/infra/k8s/planner.yaml
+++ b/infra/k8s/planner.yaml
@@ -16,6 +16,12 @@ spec:
           image: us-central1-docker.pkg.dev/PROJECT/spiceroute/planner:latest
           ports:
             - containerPort: 8000
+          env:
+            - name: OPENAI_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: spiceroute-secret
+                  key: OPENAI_API_KEY
           resources:
             requests:
               cpu: "250m"
