--- a/infra/k8s/vector.yaml
+++ b/infra/k8s/vector.yaml
@@ -24,6 +24,11 @@ spec:
                 secretKeyRef:
                   name: spiceroute-secret
                   key: DB_DSN
+            - name: OPENAI_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: spiceroute-secret
+                  key: OPENAI_API_KEY
 ---
 apiVersion: v1
 kind: Service
