--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,9 @@ ortools==9.8.3296
 numpy==1.24.3
 scikit-learn==1.3.2
 
+# OpenAI for embeddings and LLM integration
+openai==1.3.7
+
 # Additional utilities
 python-multipart==0.0.6
 httpx==0.25.2 
